--- a/project/dead_line_revenge.vcxproj
+++ b/project/dead_line_revenge.vcxproj
@@ -57,6 +57,7 @@
     <ClInclude Include="..\src\entities\components\component.h" />
     <ClInclude Include="..\src\entities\components\LifeComponent.h" />
     <ClInclude Include="..\src\entities\components\MovementComponent.h" />
+    <ClInclude Include="..\src\entities\entities_factory.h" />
     <ClInclude Include="..\src\entities\entity.h" />
     <ClInclude Include="..\src\entities\message.h" />
     <ClInclude Include="..\src\globals.h" />
@@ -117,6 +118,7 @@
     <ClCompile Include="..\src\entities\components\component.cpp" />
     <ClCompile Include="..\src\entities\components\LifeComponent.cpp" />
     <ClCompile Include="..\src\entities\components\MovementComponent.cpp" />
+    <ClCompile Include="..\src\entities\entities_factory.cpp" />
     <ClCompile Include="..\src\entities\entity.cpp" />
     <ClCompile Include="..\src\gui\button.cpp" />
     <ClCompile Include="..\src\gui\checkbox.cpp" />
