input manager cleanup

--- a/project/dead_line_revenge.vcxproj.filters
+++ b/project/dead_line_revenge.vcxproj.filters
@@ -213,6 +213,9 @@
     <ClInclude Include="..\src\entities\entities_factory.h">
       <Filter>src\entities</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\input\iinput_manager.h">
+      <Filter>src\input</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\main.cpp">
