menu manager cleanup WIP

--- a/project/dead_line_revenge.vcxproj
+++ b/project/dead_line_revenge.vcxproj
@@ -63,9 +63,10 @@
     <ClInclude Include="..\src\globals.h" />
     <ClInclude Include="..\src\gui\button.h" />
     <ClInclude Include="..\src\gui\checkbox.h" />
-    <ClInclude Include="..\src\gui\gui.h" />
+    <ClInclude Include="..\src\gui\control.h" />
     <ClInclude Include="..\src\gui\label.h" />
     <ClInclude Include="..\src\gui\menu.h" />
+    <ClInclude Include="..\src\gui\menu_manager.h" />
     <ClInclude Include="..\src\gui\slider.h" />
     <ClInclude Include="..\src\gui\string_manager.h" />
     <ClInclude Include="..\src\input\iinput_manager.h" />
@@ -123,9 +124,10 @@
     <ClCompile Include="..\src\entities\entity.cpp" />
     <ClCompile Include="..\src\gui\button.cpp" />
     <ClCompile Include="..\src\gui\checkbox.cpp" />
-    <ClCompile Include="..\src\gui\gui.cpp" />
+    <ClCompile Include="..\src\gui\control.cpp" />
     <ClCompile Include="..\src\gui\label.cpp" />
     <ClCompile Include="..\src\gui\menu.cpp" />
+    <ClCompile Include="..\src\gui\menu_manager.cpp" />
     <ClCompile Include="..\src\gui\slider.cpp" />
     <ClCompile Include="..\src\gui\string_manager.cpp" />
     <ClCompile Include="..\src\input\input_manager.cpp" />
