better gui folder organization

--- a/project/dead_line_revenge.vcxproj
+++ b/project/dead_line_revenge.vcxproj
@@ -61,14 +61,13 @@
     <ClInclude Include="..\src\entities\entity.h" />
     <ClInclude Include="..\src\entities\message.h" />
     <ClInclude Include="..\src\globals.h" />
-    <ClInclude Include="..\src\gui\button.h" />
-    <ClInclude Include="..\src\gui\checkbox.h" />
-    <ClInclude Include="..\src\gui\control.h" />
-    <ClInclude Include="..\src\gui\label.h" />
-    <ClInclude Include="..\src\gui\menu.h" />
-    <ClInclude Include="..\src\gui\menu_item.h" />
+    <ClInclude Include="..\src\gui\controls\button.h" />
+    <ClInclude Include="..\src\gui\controls\checkbox.h" />
+    <ClInclude Include="..\src\gui\controls\control.h" />
+    <ClInclude Include="..\src\gui\controls\label.h" />
+    <ClInclude Include="..\src\gui\controls\menu.h" />
+    <ClInclude Include="..\src\gui\controls\slider.h" />
     <ClInclude Include="..\src\gui\menu_manager.h" />
-    <ClInclude Include="..\src\gui\slider.h" />
     <ClInclude Include="..\src\gui\string_manager.h" />
     <ClInclude Include="..\src\input\iinput_manager.h" />
     <ClInclude Include="..\src\input\input_manager.h" />
@@ -123,13 +122,12 @@
     <ClCompile Include="..\src\entities\components\MovementComponent.cpp" />
     <ClCompile Include="..\src\entities\entities_factory.cpp" />
     <ClCompile Include="..\src\entities\entity.cpp" />
-    <ClCompile Include="..\src\gui\button.cpp" />
-    <ClCompile Include="..\src\gui\checkbox.cpp" />
-    <ClCompile Include="..\src\gui\label.cpp" />
-    <ClCompile Include="..\src\gui\menu.cpp" />
-    <ClCompile Include="..\src\gui\menu_item.cpp" />
+    <ClCompile Include="..\src\gui\controls\button.cpp" />
+    <ClCompile Include="..\src\gui\controls\checkbox.cpp" />
+    <ClCompile Include="..\src\gui\controls\label.cpp" />
+    <ClCompile Include="..\src\gui\controls\menu.cpp" />
+    <ClCompile Include="..\src\gui\controls\slider.cpp" />
     <ClCompile Include="..\src\gui\menu_manager.cpp" />
-    <ClCompile Include="..\src\gui\slider.cpp" />
     <ClCompile Include="..\src\gui\string_manager.cpp" />
     <ClCompile Include="..\src\input\input_manager.cpp" />
     <ClCompile Include="..\src\main.cpp" />
