--- a/project/dead_line_revenge.vcxproj
+++ b/project/dead_line_revenge.vcxproj
@@ -54,6 +54,7 @@
     <ClInclude Include="..\src\entities\components\behavior_tree\conditions\check_distance.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\conditions\check_hit.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\group.h" />
+    <ClInclude Include="..\src\entities\components\behavior_tree\parallel.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\repeat.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\selector.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\sequence.h" />
@@ -124,6 +125,7 @@
     <ClCompile Include="..\src\entities\components\behavior_tree\conditions\check_distance.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\conditions\check_hit.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\group.cpp" />
+    <ClCompile Include="..\src\entities\components\behavior_tree\parallel.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\repeat.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\selector.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\sequence.cpp" />
