--- a/project/dead_line_revenge.vcxproj.filters
+++ b/project/dead_line_revenge.vcxproj.filters
@@ -252,6 +252,9 @@
     <ClInclude Include="..\src\messages\message.h">
       <Filter>src\messages</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\components\RenderableComponent.h">
+      <Filter>src\components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\main.cpp">
@@ -438,6 +441,9 @@
       <Filter>src\components\behavior_tree\conditions</Filter>
     </ClCompile>
     <ClCompile Include="..\src\components\TransformComponent.cpp">
+      <Filter>src\components</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\components\RenderableComponent.cpp">
       <Filter>src\components</Filter>
     </ClCompile>
   </ItemGroup>
