PlayerControllerComponent cleanup WIP

--- a/project/dead_line_revenge.vcxproj
+++ b/project/dead_line_revenge.vcxproj
@@ -57,6 +57,7 @@
     <ClInclude Include="..\src\components\component.h" />
     <ClInclude Include="..\src\components\LifeComponent.h" />
     <ClInclude Include="..\src\components\MovementComponent.h" />
+    <ClInclude Include="..\src\components\PlayerControllerComponent.h" />
     <ClInclude Include="..\src\components\RenderableComponent.h" />
     <ClInclude Include="..\src\components\TransformComponent.h" />
     <ClInclude Include="..\src\engine\graphics_engine.h" />
@@ -130,6 +131,7 @@
     <ClCompile Include="..\src\components\component.cpp" />
     <ClCompile Include="..\src\components\LifeComponent.cpp" />
     <ClCompile Include="..\src\components\MovementComponent.cpp" />
+    <ClCompile Include="..\src\components\PlayerControllerComponent.cpp" />
     <ClCompile Include="..\src\components\RenderableComponent.cpp" />
     <ClCompile Include="..\src\components\TransformComponent.cpp" />
     <ClCompile Include="..\src\engine\graphics_engine.cpp" />
