--- a/project/dead_line_revenge.vcxproj.filters
+++ b/project/dead_line_revenge.vcxproj.filters
@@ -255,6 +255,9 @@
     <ClInclude Include="..\src\components\RenderableComponent.h">
       <Filter>src\components</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\components\PlayerControllerComponent.h">
+      <Filter>src\components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\main.cpp">
@@ -444,6 +447,9 @@
       <Filter>src\components</Filter>
     </ClCompile>
     <ClCompile Include="..\src\components\RenderableComponent.cpp">
+      <Filter>src\components</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\components\PlayerControllerComponent.cpp">
       <Filter>src\components</Filter>
     </ClCompile>
   </ItemGroup>
