AIFleeComponent cleanup finished

--- a/project/dead_line_revenge.vcxproj
+++ b/project/dead_line_revenge.vcxproj
@@ -29,6 +29,7 @@
     <ClInclude Include="..\src\common\math_utils.h" />
     <ClInclude Include="..\src\common\stdafx.h" />
     <ClInclude Include="..\src\common\sys.h" />
+    <ClInclude Include="..\src\components\AIFleeComponent.h" />
     <ClInclude Include="..\src\components\AIMeleeComponent.h" />
     <ClInclude Include="..\src\components\behavior_tree\actions\aim_player.h" />
     <ClInclude Include="..\src\components\behavior_tree\actions\change_sprite.h" />
@@ -105,6 +106,7 @@
     <ClCompile Include="..\src\common\math_utils.cpp" />
     <ClCompile Include="..\src\common\stdafx.cpp" />
     <ClCompile Include="..\src\common\sys_win.cpp" />
+    <ClCompile Include="..\src\components\AIFleeComponent.cpp" />
     <ClCompile Include="..\src\components\AIMeleeComponent.cpp" />
     <ClCompile Include="..\src\components\behavior_tree\actions\aim_player.cpp" />
     <ClCompile Include="..\src\components\behavior_tree\actions\change_sprite.cpp" />
@@ -162,7 +164,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{CC0EB618-AC99-4DFE-A4E1-534AD384C3A1}</ProjectGuid>
     <RootNamespace>dead_line_revenge</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
     <ProjectName>dead_line_revenge</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
