--- a/project/dead_line_revenge.vcxproj
+++ b/project/dead_line_revenge.vcxproj
@@ -29,6 +29,8 @@
     <ClInclude Include="..\src\common\math_utils.h" />
     <ClInclude Include="..\src\common\stdafx.h" />
     <ClInclude Include="..\src\common\sys.h" />
+    <ClInclude Include="..\src\components\AIComponent.h" />
+    <ClInclude Include="..\src\components\AIFireComponent.h" />
     <ClInclude Include="..\src\components\AIFleeComponent.h" />
     <ClInclude Include="..\src\components\AIMeleeComponent.h" />
     <ClInclude Include="..\src\components\behavior_tree\actions\aim_player.h" />
@@ -106,6 +108,8 @@
     <ClCompile Include="..\src\common\math_utils.cpp" />
     <ClCompile Include="..\src\common\stdafx.cpp" />
     <ClCompile Include="..\src\common\sys_win.cpp" />
+    <ClCompile Include="..\src\components\AIComponent.cpp" />
+    <ClCompile Include="..\src\components\AIFireComponent.cpp" />
     <ClCompile Include="..\src\components\AIFleeComponent.cpp" />
     <ClCompile Include="..\src\components\AIMeleeComponent.cpp" />
     <ClCompile Include="..\src\components\behavior_tree\actions\aim_player.cpp" />
