--- a/project/dead_line_revenge.vcxproj
+++ b/project/dead_line_revenge.vcxproj
@@ -66,6 +66,7 @@
     <ClInclude Include="..\src\components\PointsComponent.h" />
     <ClInclude Include="..\src\components\RenderableComponent.h" />
     <ClInclude Include="..\src\components\TransformComponent.h" />
+    <ClInclude Include="..\src\components\WeaponPickupComponent.h" />
     <ClInclude Include="..\src\engine\graphics_engine.h" />
     <ClInclude Include="..\src\engine\graphics_entitiy.h" />
     <ClInclude Include="..\src\engine\sound_engine.h" />
@@ -146,6 +147,7 @@
     <ClCompile Include="..\src\components\PointsComponent.cpp" />
     <ClCompile Include="..\src\components\RenderableComponent.cpp" />
     <ClCompile Include="..\src\components\TransformComponent.cpp" />
+    <ClCompile Include="..\src\components\WeaponPickupComponent.cpp" />
     <ClCompile Include="..\src\engine\graphics_engine.cpp" />
     <ClCompile Include="..\src\engine\graphics_entity.cpp" />
     <ClCompile Include="..\src\engine\sound_engine.cpp" />
