--- a/project/dead_line_revenge.vcxproj
+++ b/project/dead_line_revenge.vcxproj
@@ -60,6 +60,7 @@
     <ClInclude Include="..\src\components\bossIAComponent.h" />
     <ClInclude Include="..\src\components\component.h" />
     <ClInclude Include="..\src\components\ExplossiveComponent.h" />
+    <ClInclude Include="..\src\components\HUDComponent.h" />
     <ClInclude Include="..\src\components\HUDMessageComponent.h" />
     <ClInclude Include="..\src\components\LifeComponent.h" />
     <ClInclude Include="..\src\components\MovementComponent.h" />
@@ -142,6 +143,7 @@
     <ClCompile Include="..\src\components\bossIAComponent.cpp" />
     <ClCompile Include="..\src\components\component.cpp" />
     <ClCompile Include="..\src\components\ExplossiveComponent.cpp" />
+    <ClCompile Include="..\src\components\HUDComponent.cpp" />
     <ClCompile Include="..\src\components\HUDMessageComponent.cpp" />
     <ClCompile Include="..\src\components\LifeComponent.cpp" />
     <ClCompile Include="..\src\components\MovementComponent.cpp" />
